# base64-converter

./: .gitignore  Cargo.toml  README.md  Trunk.toml  base64-converter.apk.idsig  index.html  styles.css
android/: sign-apk.sh  stormlight.jks
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
